fixed hidden bugs where i swapped latitude with longitude in postgres and code setup for running on local environment setup for k8s deployment(barely runnable) Format the code